# CryptoTrading

./: README.md  diagram.xml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: exception_handler.py  response.py
backend/app/routers/: market.py
backend/app/schemas/: api_response.py  coin.py
backend/app/services/: alternativeme_service.py  binance_service.py
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: FearGreedGauge.tsx  Linechart24h.tsx  SimpleCard.tsx  Table.tsx  Tick24hTable.tsx
frontend/src/cores/home/: Home.tsx  mock.ts
frontend/src/layouts/: AppHeader.tsx  AppLayout.tsx
frontend/src/router/: index.tsx  paths.ts
