[project]
name = "mini-cryptotrading"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Viet Nguyen", email = "huyviet.dev@gmail.com" }
]

dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "uvicorn[standard]>=0.41.0,<0.42.0",
    "httpx (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"